Add SWAPP_BASE_API to .env, replace swapi urls with swapp urls

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,6 @@
 SWAPI_BASE_API="https://swapi.dev/api/"
+SWAPP_BASE_API="localhost:3000/"
+
 DB_HOST="127.0.0.1"
 DB_PORT="5432"
 DB_USERNAME="root"
