--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,14 @@ services:
     ports:
       - "5050:80"
     restart: always
+  web:
+    container_name: motor
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    ports:
+      - "3000:3000"
+    restart: always
