--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,10 @@
 SWAPI_BASE_API="https://swapi.dev/api/"
 SWAPP_BASE_API="localhost:3000/"
 
-DB_HOST="127.0.0.1"
+DB_HOST="db"
 DB_PORT="5432"
-DB_USERNAME="root"
-DB_PASSWORD="root"
-DB_NAME="test_db"
+DB_USERNAME="postgres"
+DB_PASSWORD="postgres"
+DB_NAME="postgres"
 
 PORT=3000
