--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - POSTGRES_PASSWORD=postgres
     container_name: postgres
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     ports:
       - '5432:5432'
     profiles:
@@ -21,9 +21,9 @@ services:
       dockerfile: Dockerfile
     container_name: nest-docker-postgres
     environment:
-      - PORT=${PORT}
+      - PORT=${PORT:-3000}
     ports:
-      - '3000:3000'
+      - ${PORT:-3000}:${PORT:-3000}
     depends_on:
       - db
     volumes:
@@ -45,3 +45,6 @@ services:
     profiles:
       - ''
       - local
+
+volumes:
+  postgres:
